[WPE] GStreamer hole punch does not render correctly with fixed body position https://bugs.webkit.org/show_bug.cgi?id=274469

Reviewed by Carlos Garcia Campos.

When rendering into an intermediate surface due to preserve3D mode, store the
holepunch rectangles that are found in the subtree. Once the rendering is done,
and before blending the intermediate surface into the main framebuffer, draw
the stored holepunch rectangles with transparent, so they pierce the background
content.

* Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::paintSelf):
(WebCore::TextureMapperLayer::paintWith3DRenderingContext):
* Source/WebCore/platform/graphics/texmap/TextureMapperPlatformLayer.h:
(WebCore::TextureMapperPlatformLayer::isHolePunchBuffer const):
* Source/WebCore/platform/graphics/texmap/TextureMapperPlatformLayerBuffer.cpp:
(WebCore::TextureMapperPlatformLayerBuffer::isHolePunchBuffer const):
* Source/WebCore/platform/graphics/texmap/TextureMapperPlatformLayerBuffer.h:

Canonical link: https://commits.webkit.org/280901@main